# diff-loc

./: .gitlab-ci.yml  CHANGELOG.md  README.md  diff-loc.cabal  run-docspec.sh
src/: DiffLoc.hs
src/DiffLoc/: Colline.hs  Diff.hs  Index.hs  Internal.hs  Interval.hs  Shift.hs  Starter.hs  Test.hs  Unsafe.hs
src/DiffLoc/Internal/: Colline.hs  Diff.hs  Index.hs  Interval.hs  Shift.hs  Test.hs
