cabal-version:      3.0
name:               diff-loc
version:            0.1.0.0
synopsis:           Map file locations across diffs
-- description:
homepage:           https://gitlab.com/lysxia/diff-loc
license:            MIT
license-file:       LICENSE
author:             Li-yao Xia
maintainer:         lysxia@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

flag test
  description: Enable test module.
  default: False
  manual: True

library
    import:           warnings
    exposed-modules:
      DiffLoc
      DiffLoc.Internal
    build-depends:
      fingertree,
      base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
    if flag(test)
      exposed-modules:
        DiffLoc.Test
      build-depends:
        QuickCheck
